tieqi666.github.io
1.0

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <img src="https://octodex.github.com/images/daftpunktocat-thomas.gif" id="octocat" alt="octocat-gif" />
 
 <!-- Change this code here by copy and pasting your template on line 15 -->
-<p><p>Welcome to 铁骑666 GitHub Pages website!</p></p>
+<p><p>Welcome to tieqi666 GitHub Pages website!</p></p>
 
 </body>
 </html>
